--- a/css/index.css
+++ b/css/index.css
@@ -57,12 +57,13 @@ header>.avatar {
 
 header>h1 {
     margin: 10px;
-    font-size: 14px;
+    font-size: 24px;
     color: rgb(250, 250, 250);
 }
 
 header>p {
     margin: 0;
+    font-size: 24px;
     color: #999;
 }
 
@@ -167,6 +168,12 @@ main section>.detail {
     margin-top: 10px;
 }
 
+.skills .detail .highlight {
+    color: #00a4ff;
+    border-radius: 5px;
+    background: #efefef;
+}
+
 .map .detail dd {
     height: 3px;
     border-radius: 3px;
@@ -188,9 +195,20 @@ main section>.detail {
     grid-gap: 10px;
 }
 
+.aboutme .about>p {
+    margin-top: 8px;
+    font-size: 16px;
+}
+
 @media(max-width:678px) {
     .layout-1 .detail>li {
         grid: auto auto auto/ auto auto;
+    }
+}
+
+@media(max-width:678px) {
+    .aboutme .about>p {
+        font-size: 16px;
     }
 }
 
@@ -230,4 +248,52 @@ main section>.detail {
     .layout-1 .detail>li .content {
         grid-area: 3/1/4/3;
     }
+}
+
+.detail .content>img {
+    margin-top: 5px;
+    width: 100%;
+    border: 1px solid #ddd;
+    border-style: dashed;
+    border-radius: 5px;
+}
+
+.detail .content a>img {
+    margin-left: 150px;
+    width: 80px;
+    height: 80px;
+}
+
+.skills .uli li {
+    list-style: none;
+}
+
+
+/* .skills .detail a {
+    display: inline-block;
+    width: 100%;
+} */
+
+.education .detail .highlight {
+    color: #00a4ff;
+    border-radius: 5px;
+    background: #efefef;
+}
+
+.project .detail .highlight {
+    color: #00a4ff;
+    border-radius: 5px;
+    background: #efefef;
+}
+
+.experience .detail .highlight {
+    color: #00a4ff;
+    border-radius: 5px;
+    background: #efefef;
+}
+
+.aboutme .about .highlight {
+    color: #00a4ff;
+    border-radius: 5px;
+    background: #efefef;
 }
